fix table spacing

--- a/packages/studio/src/pages/apps/app/resources/resource/IndexPage/ResourceRow/index.module.css
+++ b/packages/studio/src/pages/apps/app/resources/resource/IndexPage/ResourceRow/index.module.css
@@ -32,3 +32,12 @@
 .actionCell {
   margin-bottom: -1px;
 }
+
+.boolean {
+  text-align: center !important;
+
+  & label {
+    margin: 0 !important;
+    padding-left: 1rem !important;
+  }
+}
